--- a/Backend /pom.xml
+++ b/Backend /pom.xml
@@ -14,6 +14,7 @@
             <version>3.1.2</version>
     </parent>
 
+
     <dependencies>
         <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
         <dependency>
@@ -57,7 +58,16 @@
             <artifactId>commons-io</artifactId>
             <version>2.11.0</version> <!-- You can check for the latest version on the Apache Commons IO website -->
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-aop -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+            <version>3.1.5</version>
+        </dependency>
+
     </dependencies>
+
     <properties>
         <maven.compiler.source>20</maven.compiler.source>
         <maven.compiler.target>20</maven.compiler.target>
