complete the get alll student api

--- a/Backend-Springboot/src/main/resources/application.yml
+++ b/Backend-Springboot/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url : jdbc:mysql://localhost:3306/Manpower
+    url : jdbc:mysql://localhost:3306/studentDB
     username: root
     password: Zandaru1
   jpa:
